--- a/src/components/hosting_cloud/PlanesHostingCloud.astro
+++ b/src/components/hosting_cloud/PlanesHostingCloud.astro
@@ -45,15 +45,15 @@ const {
             href={link}
             >Realizar Pedido <i class="text-xs pl-2 fa-solid fa-chevron-right"></i></a
         >
-        <p class="font-semibold py-5">Incluye:</p>
-        <p class="underline"> <i class="fa-solid fa-check mr-2 text-xs"></i> <strong>{des1}</strong> de espacio</p>
-        <p> <i class="fa-solid fa-check mr-2 text-xs"></i> <strong>Tráfico Ilimitado</strong></p>
-        <p> <i class="fa-solid fa-check mr-2 text-xs"></i> {des3} dominio alojado</p>
-        <p class="underline"> <i class="fa-solid fa-check mr-2 text-xs"></i> Soporte</p>
-        <p class="underline"> <i class="fa-solid fa-check mr-2 text-xs"></i> Backup</p>
-        <p> <i class="fa-solid fa-check mr-2 text-xs"></i> <strong>{des6}</strong> subdominios</p>
-        <p> <i class="fa-solid fa-check mr-2 text-xs"></i> <strong>{des7}</strong> dominios aparcados</p>
-        <p> <i class="fa-solid fa-check mr-2 text-xs"></i> <strong>{des8}</strong> correos electrónicos</p>
-        <p> <i class="fa-solid fa-check mr-2 text-xs"></i> <strong>{des9}</strong> MySQL Base de datos</p>
+        <p class="uppercase font-semibold text-sm tracking-wider text-gray-500 py-5">Incluye:</p>
+        <p class="underline text-sm font-semibold"> <i class="fa-solid fa-check mr-2 text-xs"></i> <strong>{des1}</strong> de espacio</p>
+        <p class="text-sm font-semibold"> <i class="fa-solid fa-check mr-2 text-xs"></i>Tráfico Ilimitado</p>
+        <p class="text-sm font-semibold"> <i class="fa-solid fa-check mr-2 text-xs"></i> <strong>{des3}</strong> dominio alojado</p>
+        <p class="underline text-sm font-semibold"> <i class="fa-solid fa-check mr-2 text-xs"></i> Soporte</p>
+        <p class="underline text-sm font-semibold"> <i class="fa-solid fa-check mr-2 text-xs"></i> Backup</p>
+        <p class="text-sm font-semibold"> <i class="fa-solid fa-check mr-2 text-xs"></i> <strong>{des6}</strong> subdominios</p>
+        <p class="text-sm font-semibold"> <i class="fa-solid fa-check mr-2 text-xs"></i> <strong>{des7}</strong> dominios aparcados</p>
+        <p class="text-sm font-semibold"> <i class="fa-solid fa-check mr-2 text-xs"></i> <strong>{des8}</strong> correos electrónicos</p>
+        <p class="text-sm font-semibold"> <i class="fa-solid fa-check mr-2 text-xs"></i> <strong>{des9}</strong> MySQL Base de datos</p>
     </div>
 </section>
