--- a/src/components/hosting_cloud/SubmenuHostingCloud.astro
+++ b/src/components/hosting_cloud/SubmenuHostingCloud.astro
@@ -72,14 +72,14 @@
     }
 
     .color__principal {
-        color: #22b573;
+        color: var(--color-primario);
     }
 
     .linea__debajo {
         width: 100%;
         height: 5px;
         border-radius: 5px;
-        background-color: #22b573;
+        background-color: var(--color-primario);
     }
 
     a {
