--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,13 +37,18 @@ const { title } = Astro.props;
 
 	<style is:global>
 		:root {
-			--color-primario: #22b573;
+			--color-primario: #00b285;
 			--color-primario-transparencia: #22b57382;
 			--color-secundario: #9e2cdc;
 			--color-azul: #4766ce;
+			--color-morado: #1e1b3d;
 			--color-span: #00ffff;
 			--color-subrayado: #e9e9fd;
 			--color-oscuro: #0e141b;
+			--gradient-text: #7186ff;
+			--gradient-color-1: #7286ff;
+			--gradient-color-2: #fe7587;
+			--dropdown-border: rgba(255, 255, 255, .1);
 		}
 		body {
 			font-family: "Girol";
