--- a/src/pages/hosting-linux.astro
+++ b/src/pages/hosting-linux.astro
@@ -440,7 +440,7 @@ import LogosScrollHosting from "../components/hosting_linux/LogosScrollHosting.a
     <!-- INICIO CODIGO SECCION PREGUNTAS FRECUENTES-->
 
     <section class="bg-white pt-20 pb-20">
-        <div class="contenedor__hosting__preguntas mx-5">
+        <div class="contenedor__hosting__preguntas mx-auto px-5">
             <h2 class="mb-12">Preguntas Frecuentes</h2>
             <div class="relative mb-3">
                 <h6 class="mb-0">
@@ -742,7 +742,7 @@ import LogosScrollHosting from "../components/hosting_linux/LogosScrollHosting.a
     */
 
     .contenedor__hosting__precios {
-        max-width: 1100px;
+        max-width: 1000px;
         background: linear-gradient(97.03deg, #edf4ff -0.58%, #defffe 92.09%);
         padding: 0.9rem;
         border-radius: 1rem;
@@ -772,6 +772,7 @@ import LogosScrollHosting from "../components/hosting_linux/LogosScrollHosting.a
 
     .contenedor__hosting__preguntas {
         max-width: 1000px;
+
     }
 
     .bg__soportamos{
