--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -67,7 +67,7 @@
                   <p
                     class="uppercase tracking-wider text-gray-500 font-medium text-[13px]"
                   >
-                    Extensions
+                    PLUGIN RECOMENDADOS
                   </p>
                   <ul class="mt-3 text-[15px]">
                     <li>
@@ -75,9 +75,9 @@
                         href="#"
                         class="block p-2 -mx-2 rounded-lg hover:bg-gradient-to-br hover:from-indigo-50 hover:to-pink-50 hover:via-blue-50 transition ease-in-out duration-300 text-gray-800 font-semibold hover:text-indigo-600"
                       >
-                        Plugins
+                        Elementor Pro
                         <p class="text-gray-500 font-normal">
-                          Tweak existing functionality
+                          Crea sitios web a velocidades récord
                         </p>
                       </a>
                     </li>
@@ -86,9 +86,9 @@
                         href="#"
                         class="block p-2 -mx-2 rounded-lg hover:bg-gradient-to-br hover:from-indigo-50 hover:to-pink-50 hover:via-blue-50 transition ease-in-out duration-300 text-gray-800 font-semibold hover:text-indigo-600"
                       >
-                        Batch uploads
+                      Divi Builder
                         <p class="text-gray-500 font-normal">
-                          Get your time back
+                          Con su sistema de arrastrar y soltar
                         </p>
                       </a>
                     </li>
@@ -97,9 +97,9 @@
                         href="#"
                         class="block p-2 -mx-2 rounded-lg hover:bg-gradient-to-br hover:from-indigo-50 hover:to-pink-50 hover:via-blue-50 transition ease-in-out duration-300 text-gray-800 font-semibold hover:text-indigo-600"
                       >
-                        Social sharing
+                      WPBakery
                         <p class="text-gray-500 font-normal">
-                          Generate content for socials
+                          Incluye todo tipo de elementos para maquetar
                         </p>
                       </a>
                     </li>
@@ -126,7 +126,7 @@
               <p
                 class="uppercase tracking-wider text-gray-500 font-medium text-[13px]"
               >
-                Use cases
+                Realizamos
               </p>
               <ul class="mt-3 text-[15px]">
                 <li>
@@ -134,7 +134,7 @@
                     href="#"
                     class="bg-transparent bg-clip-text text-transparent bg-gradient-to-br from-indigo-400 to-pink-700 via-blue-500 font-semibold hover:from-blue-600 hover:to-indigo-600 hover:via-pink-400 py-1 block"
                   >
-                    Creators
+                    APP Radio
                   </a>
                 </li>
                 <li>
@@ -142,7 +142,7 @@
                     href="#"
                     class="bg-transparent bg-clip-text text-transparent bg-gradient-to-br from-indigo-400 to-pink-700 via-blue-500 font-semibold hover:from-blue-600 hover:to-indigo-600 hover:via-pink-400 py-1 block"
                   >
-                    Streamers
+                    APP Tv
                   </a>
                 </li>
                 <li>
@@ -150,7 +150,7 @@
                     href="#"
                     class="bg-transparent bg-clip-text text-transparent bg-gradient-to-br from-indigo-400 to-pink-700 via-blue-500 font-semibold hover:from-blue-600 hover:to-indigo-600 hover:via-pink-400 py-1 block"
                   >
-                    Influence
+                  Audio Record Mixer
                   </a>
                 </li>
                 <li>
@@ -192,7 +192,7 @@
                 href="#"
                 class="block p-2 -mx-2 rounded-lg hover:bg-gradient-to-br hover:from-indigo-50 hover:to-pink-50 transition ease-in-out duration-300 text-gray-800 font-semibold hover:text-indigo-600"
               >
-                Documentation
+                Guias y Tutoriales
                 <p class="text-gray-500 font-normal">
                   Start integrating in no time
                 </p>
@@ -202,15 +202,15 @@
                   <p
                     class="uppercase tracking-wider text-gray-500 font-medium text-[13px]"
                   >
-                    Get started
+                    RADIO STREAMING
                   </p>
                   <ul class="mt-3 text-[15px]">
                     <li>
                       <a
-                        href="#"
+                        href="/centovacast"
                         class="text-gray-600 hover:text-gray-800 py-1 block font-normal"
                       >
-                        Libraries and SDKs
+                      Radio CentovaCast
                       </a>
                     </li>
                     <li>
@@ -218,7 +218,7 @@
                         href="#"
                         class="text-gray-600 hover:text-gray-800 py-1 block font-normal"
                       >
-                        Plugins
+                      Radio SonicPanel
                       </a>
                     </li>
                     <li>
@@ -226,7 +226,7 @@
                         href="#"
                         class="text-gray-600 hover:text-gray-800 py-1 block font-normal"
                       >
-                        Code samples
+                      Server Azuracast
                       </a>
                     </li>
                     <li>
@@ -234,7 +234,7 @@
                         href="#"
                         class="text-gray-600 hover:text-gray-800 py-1 block font-normal"
                       >
-                        Tutorials
+                      Reseller
                       </a>
                     </li>
                   </ul>
@@ -243,7 +243,7 @@
                   <p
                     class="uppercase tracking-wider text-gray-500 font-medium text-[13px]"
                   >
-                    Guides
+                   TV STREAMING
                   </p>
                   <ul class="mt-3 text-[15px]">
                     <li>
@@ -251,31 +251,7 @@
                         href="#"
                         class="text-gray-600 hover:text-gray-800 py-1 block font-normal"
                       >
-                        Accept online payments
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="#"
-                        class="text-gray-600 hover:text-gray-800 py-1 block font-normal"
-                      >
-                        Editing video like a pro
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="#"
-                        class="text-gray-600 hover:text-gray-800 py-1 block font-normal"
-                      >
-                        Automation techniques
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="#"
-                        class="text-gray-600 hover:text-gray-800 py-1 block font-normal"
-                      >
-                        Create stunning effects
+                      Streaming HD
                       </a>
                     </li>
                   </ul>
@@ -286,70 +262,17 @@
         </div>
       </li>
       <li class="relative group px-3 py-2">
-        <button class="hover:opacity-50 cursor-auto"
-          >Páginas Web <i class="fa-solid fa-angle-down"></i></button
-        >
-        <div
-          class="absolute top-2 -left-2 transition group-hover:translate-y-5 translate-y-0 opacity-0 invisible group-hover:opacity-100 group-hover:visible duration-500 ease-in-out group-hover:transform z-50 min-w-[200px] transform"
-        >
-          <div class="relative top-6 p-6 bg-white rounded-xl shadow-xl w-full">
-            <div
-              class="w-10 h-10 bg-white transform rotate-45 absolute top-0 z-0 -translate-x-4 transition-transform group-hover:translate-x-3 duration-500 ease-in-out rounded-sm"
-            >
-            </div>
-            <div class="relative z-10">
-              <ul class="text-[15px]">
-                <li>
-                  <a
-                    href="#"
-                    class="text-gray-600 hover:text-gray-800 py-1 block font-normal"
-                  >
-                    Get Support
-                  </a>
-                </li>
-                <li>
-                  <a
-                    href="#"
-                    class="text-gray-600 hover:text-gray-800 py-1 block font-normal"
-                  >
-                    Blog
-                  </a>
-                </li>
-                <li>
-                  <a
-                    href="#"
-                    class="text-gray-600 hover:text-gray-800 py-1 block font-normal"
-                  >
-                    Case Studies
-                  </a>
-                </li>
-                <li>
-                  <a
-                    href="#"
-                    class="text-gray-600 hover:text-gray-800 py-1 block font-normal"
-                  >
-                    Guides
-                  </a>
-                </li>
-                <li>
-                  <a
-                    href="#"
-                    class="text-gray-600 hover:text-gray-800 py-1 block font-normal"
-                  >
-                    News &amp; Events
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
+        <a href="/dominios" class="hover:opacity-50 cursor-pointer">Páginas Web</a>
       </li>
       <li class="relative group px-3 py-2">
         <a href="/dominios" class="hover:opacity-50 cursor-pointer">Dominios</a>
       </li>
+      <li class="relative group px-3 py-2">
+        <a href="/dominios" class="hover:opacity-50 cursor-pointer">Contacto</a>
+      </li>
     </ul>
   </nav>
-  <nav class="lg:hidden">
+  <nav class="hidden lg:block">
     <ul>
       <li>
         <a
