--- a/src/components/hosting_linux/cardPlanesHosting.astro
+++ b/src/components/hosting_linux/cardPlanesHosting.astro
@@ -38,23 +38,23 @@ const {
     <article
         class="flex h-12 title__planes__descuento items-center  rounded-tl-lg rounded-tr-lg"
     >
-        <p class="color__titulo font-normal text-sm">DESCUENTO ESPECIAL</p>
+        <p class="color__titulo  uppercase mb-5 font-semibold text-sm tracking-wider">DESCUENTO ESPECIAL</p>
     </article>
 
     <div class="rounded-bl-lg rounded-br-lg">
         <h2 class="font-bold text-3xl">{plan}</h2>
         <p class="text-4xl font-extrabold">{precio}</p>
-        <p class="mb-5">{mes}</p>
+        <p class="mb-5 text-sm font-semibold">{mes}</p>
         <p class="mb-5">{opcion}</p>
-        <p class="underline"> <strong>{des1}</strong> de espacio</p>
-        <p> <strong>{des2}</strong> tráfico</p>
-        <p>{des3}</p>
-        <p>{des4}</p>
-        <p class="underline">{des5}</p>
-        <p>{des6}</p>
-        <p>{des7}</p>
-        <p>{des8}</p>
-        <p>{des9}</p>
+        <p class="underline text-sm font-semibold"> <strong>{des1}</strong> de espacio</p>
+        <p class="text-sm font-semibold"> <strong>{des2}</strong> tráfico</p>
+        <p class="text-sm font-semibold">{des3}</p>
+        <p class="text-sm font-semibold">{des4}</p>
+        <p class="underline text-sm font-semibold">{des5}</p>
+        <p class="text-sm font-semibold">{des6}</p>
+        <p class="text-sm font-semibold">{des7}</p>
+        <p class="text-sm font-semibold">{des8}</p>
+        <p class="text-sm font-semibold">{des9}</p>
         <a class="bg-principal hover:bg-principalDegra text-white font-bold py-2 px-4 rounded-lg inline-block mt-5" href={link}>Comprar Ahora <i class="fa-solid fa-chevron-right text-xs pl-2"></i></a>
     </div>
 </section>
@@ -65,15 +65,16 @@ const {
         color: var(--color-primario);
     }
 
+    /*
     .hover__planes{
         box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.1);
         border-radius: 1rem;
         transition: all .2s ease-out;
-    }
+    }*/
 
     section {
         padding: 2rem 2rem;
-        background-color: white;
+       /* background-color: white;*/
 
     }
 
