--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -72,7 +72,7 @@
                   <ul class="mt-3 text-[15px]">
                     <li>
                       <a
-                        href="#"
+                        href="https://elementor.com/" target="_blank"
                         class="block p-2 -mx-2 rounded-lg hover:bg-gradient-to-br hover:from-indigo-50 hover:to-pink-50 hover:via-blue-50 transition ease-in-out duration-300 text-gray-800 font-semibold hover:text-indigo-600"
                       >
                         Elementor Pro
@@ -83,7 +83,7 @@
                     </li>
                     <li>
                       <a
-                        href="#"
+                        href="https://www.elegantthemes.com/gallery/divi/" target="_blank"
                         class="block p-2 -mx-2 rounded-lg hover:bg-gradient-to-br hover:from-indigo-50 hover:to-pink-50 hover:via-blue-50 transition ease-in-out duration-300 text-gray-800 font-semibold hover:text-indigo-600"
                       >
                       Divi Builder
@@ -94,7 +94,7 @@
                     </li>
                     <li>
                       <a
-                        href="#"
+                        href="https://wpbakery.com/" target="_blank"
                         class="block p-2 -mx-2 rounded-lg hover:bg-gradient-to-br hover:from-indigo-50 hover:to-pink-50 hover:via-blue-50 transition ease-in-out duration-300 text-gray-800 font-semibold hover:text-indigo-600"
                       >
                       WPBakery
@@ -131,7 +131,7 @@
               <ul class="mt-3 text-[15px]">
                 <li>
                   <a
-                    href="#"
+                    href="https://walink.co/4f797c"
                     class="bg-transparent bg-clip-text text-transparent bg-gradient-to-br from-indigo-400 to-pink-700 via-blue-500 font-semibold hover:from-blue-600 hover:to-indigo-600 hover:via-pink-400 py-1 block"
                   >
                     APP Radio
@@ -139,7 +139,7 @@
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="https://walink.co/4f797c"
                     class="bg-transparent bg-clip-text text-transparent bg-gradient-to-br from-indigo-400 to-pink-700 via-blue-500 font-semibold hover:from-blue-600 hover:to-indigo-600 hover:via-pink-400 py-1 block"
                   >
                     APP Tv
@@ -147,26 +147,10 @@
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="https://walink.co/4f797c"
                     class="bg-transparent bg-clip-text text-transparent bg-gradient-to-br from-indigo-400 to-pink-700 via-blue-500 font-semibold hover:from-blue-600 hover:to-indigo-600 hover:via-pink-400 py-1 block"
                   >
                   Audio Record Mixer
-                  </a>
-                </li>
-                <li>
-                  <a
-                    href="#"
-                    class="bg-transparent bg-clip-text text-transparent bg-gradient-to-br from-indigo-400 to-pink-700 via-blue-500 font-semibold hover:from-blue-600 hover:to-indigo-600 hover:via-pink-400 py-1 block"
-                  >
-                    Programming
-                  </a>
-                </li>
-                <li>
-                  <a
-                    href="#"
-                    class="bg-transparent bg-clip-text text-transparent bg-gradient-to-br from-indigo-400 to-pink-700 via-blue-500 font-semibold hover:from-blue-600 hover:to-indigo-600 hover:via-pink-400 py-1 block"
-                  >
-                    Design
                   </a>
                 </li>
               </ul>
@@ -188,16 +172,8 @@
             </div>
 
             <div class="relative z-10">
-              <a
-                href="#"
-                class="block p-2 -mx-2 rounded-lg hover:bg-gradient-to-br hover:from-indigo-50 hover:to-pink-50 transition ease-in-out duration-300 text-gray-800 font-semibold hover:text-indigo-600"
-              >
-                Guias y Tutoriales
-                <p class="text-gray-500 font-normal">
-                  Start integrating in no time
-                </p>
-              </a>
-              <div class="mt-6 grid grid-cols-2 gap-6">
+
+              <div class="grid grid-cols-2 gap-6">
                 <div>
                   <p
                     class="uppercase tracking-wider text-gray-500 font-medium text-[13px]"
@@ -208,31 +184,31 @@
                     <li>
                       <a
                         href="/centovacast"
-                        class="text-gray-600 hover:text-gray-800 py-1 block font-normal"
+                        class="text-gray-600 hover:text-gray-800 py-1 block font-semibold"
                       >
-                      Radio CentovaCast
+                      CentovaCast
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="/sonicpanel"
+                        class="text-gray-600 hover:text-gray-800 py-1 block font-semibold"
+                      >
+                      SonicPanel
                       </a>
                     </li>
                     <li>
                       <a
                         href="#"
-                        class="text-gray-600 hover:text-gray-800 py-1 block font-normal"
-                      >
-                      Radio SonicPanel
-                      </a>
-                    </li>
-                    <li>
-                      <a
-                        href="#"
-                        class="text-gray-600 hover:text-gray-800 py-1 block font-normal"
+                        class="text-gray-600 hover:text-gray-800 py-1 block font-semibold"
                       >
                       Server Azuracast
                       </a>
                     </li>
                     <li>
                       <a
-                        href="#"
-                        class="text-gray-600 hover:text-gray-800 py-1 block font-normal"
+                        href="/reseller-radio"
+                        class="text-gray-600 hover:text-gray-800 py-1 block font-semibold"
                       >
                       Reseller
                       </a>
@@ -248,27 +224,40 @@
                   <ul class="mt-3 text-[15px]">
                     <li>
                       <a
-                        href="#"
-                        class="text-gray-600 hover:text-gray-800 py-1 block font-normal"
+                        href="/tv-streaming"
+                        class="text-gray-600 hover:text-gray-800 py-1 block font-semibold"
                       >
                       Streaming HD
                       </a>
                     </li>
                   </ul>
+
                 </div>
               </div>
+
+              <a
+              href="https://www.youtube.com/results?search_query=centovacast"
+              class="block p-2 mt-5 rounded-lg hover:bg-gradient-to-br hover:from-indigo-50 hover:to-pink-50 transition ease-in-out duration-300 text-gray-800 font-semibold hover:text-indigo-600"
+            >
+              Guias y Tutoriales
+              <p class="text-gray-500 font-normal">
+                Todo para empezar tu radio
+              </p>
+            </a>
+
             </div>
+
           </div>
         </div>
       </li>
       <li class="relative group px-3 py-2">
-        <a href="/dominios" class="hover:opacity-50 cursor-pointer">Páginas Web</a>
+        <a href="/paginas-web" class="hover:opacity-50 cursor-pointer">Páginas Web</a>
       </li>
       <li class="relative group px-3 py-2">
         <a href="/dominios" class="hover:opacity-50 cursor-pointer">Dominios</a>
       </li>
       <li class="relative group px-3 py-2">
-        <a href="/dominios" class="hover:opacity-50 cursor-pointer">Contacto</a>
+        <a href="/contacto" class="hover:opacity-50 cursor-pointer">Contacto</a>
       </li>
     </ul>
   </nav>
