--- a/src/components/resellerradio/CardPreciosResellerRadio.astro
+++ b/src/components/resellerradio/CardPreciosResellerRadio.astro
@@ -14,7 +14,7 @@ const { plan, precio, activacion, link, des1, des2, des3 } = Astro.props;
 
 <section class="p-5">
     <p class="text-white uppercase font-light text-sm tracking-widest">
-        Plan {plan}
+        Streaming {plan}
     </p>
     <p class="text-white mt-5">
         <span class="text-4xl font-semibold">{precio}</span><span
@@ -31,7 +31,7 @@ const { plan, precio, activacion, link, des1, des2, des3 } = Astro.props;
                 height="10"
                 alt="Circle"
             />
-            <p class="text-white text-sm"><strong>{des1}</strong> oyentes</p>
+            <p class="text-white text-sm"><strong>{des1}</strong> Radios</p>
         </li>
         <li class="flex items-center">
             <img
@@ -101,7 +101,7 @@ const { plan, precio, activacion, link, des1, des2, des3 } = Astro.props;
                 height="10"
                 alt="Circle"
             />
-            <p class="text-white text-sm">Shoutcast</p>
+            <p class="text-white text-sm">Shoutcast / Icecast</p>
         </li>
         <li class="flex items-center">
             <img
@@ -111,7 +111,7 @@ const { plan, precio, activacion, link, des1, des2, des3 } = Astro.props;
                 height="10"
                 alt="Circle"
             />
-            <p class="text-white text-sm">Panel de Control</p>
+            <p class="text-white text-sm">Panel CentovaCast</p>
         </li>
         <li class="flex items-center">
             <img
