--- a/src/pages/centovacast.astro
+++ b/src/pages/centovacast.astro
@@ -11,7 +11,7 @@ import CardDescripCentovaDos from "../components/centovacast/CardDescripCentovaD
 
 ---
 
-<Layout title="Hosting Internet Services | Hosting Cloud">
+<Layout title="Hosting Internet Services | Radio CentovaCast">
     <!-- INICIA CODIGO SECCION HEADER-->
 
     <main>
