--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -11,7 +11,7 @@ import CardDescripDos from "../components/dominios/CardDescripDos.astro";
 
 ---
 
-<Layout title="Hosting Internet Services | Dominios">
+<Layout title="Hosting Internet Services | Contacto">
     <!-- INICIA CODIGO SECCION HEADER-->
 
     <header class="css-selector">
