--- a/src/pages/hosting-reseller.astro
+++ b/src/pages/hosting-reseller.astro
@@ -10,7 +10,7 @@ import DescripcionHosting from "../components/hosting_linux/cardDescrip.astro";
 
 ---
 
-<Layout title="Hosting Internet Services | Hosting Cloud">
+<Layout title="Hosting Internet Services | Hosting Reseller">
     <!-- INICIA CODIGO SECCION HEADER-->
 
     <header class="h-screen css-selector">
