--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -106,7 +106,7 @@ import Footer from "../components/Footer.astro";
 				<div>
 					<a
 						class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg inline-block"
-						href="/radio-streaming"
+						href="/centovacast"
 					>
 						Conoce más
 						<i class="fa-solid fa-arrow-right ml-3"></i>
@@ -133,13 +133,13 @@ import Footer from "../components/Footer.astro";
 					title1="Radio"
 					title2="Streaming"
 					img="/img/SolarRadioBroken.svg"
-					href="/radio-streaming"
+					href="/centovacast"
 				/>
 				<TarjetasIndex
 					title1="Streaming"
 					title2="de TV"
 					img="/img/SolarTvBroken.svg"
-					href="/streaming-tv"
+					href="/tv-streaming"
 				/>
 			</div>
 		</section>
@@ -264,7 +264,7 @@ import Footer from "../components/Footer.astro";
 			<div
 				class="contenedor mx-auto pb-20 text-center font-semibold text-xl"
 			>
-				<a class="text-white underline" href="/radio-streaming"
+				<a class="text-white underline" href="/centovacast"
 					>Ver todos los planes <i
 						class="fa-solid pl-2 fa-arrow-right-long"></i></a
 				>
