--- a/src/pages/reseller-radio.astro
+++ b/src/pages/reseller-radio.astro
@@ -11,7 +11,7 @@ import CardDescripCentovaDos from "../components/centovacast/CardDescripCentovaD
 import CardPreciosResellerRadio from "../components/resellerradio/CardPreciosResellerRadio.astro";
 ---
 
-<Layout title="Hosting Internet Services | Hosting Cloud">
+<Layout title="Hosting Internet Services | Reseller Radio">
     <!-- INICIA CODIGO SECCION HEADER-->
 
     <main>
