--- a/src/pages/terminos.astro
+++ b/src/pages/terminos.astro
@@ -7,7 +7,7 @@ import Footer from "../components/Footer.astro";
 
 ---
 
-<Layout title="Hosting Internet Services | Dominios">
+<Layout title="Hosting Internet Services | Términos y Condiciones">
     <!-- INICIA CODIGO SECCION HEADER-->
 
     <header class="css-selector">
