--- a/src/pages/tv-streaming.astro
+++ b/src/pages/tv-streaming.astro
@@ -11,7 +11,7 @@ import CardPrecioTvStreaming from "../components/tv_streaming/CardPrecioTvStream
 
 ---
 
-<Layout title="Hosting Internet Services | Hosting Cloud">
+<Layout title="Hosting Internet Services | Tv Streaming">
     <!-- INICIA CODIGO SECCION HEADER-->
 
     <main>
