--- a/src/components/FooterOscuro.astro
+++ b/src/components/FooterOscuro.astro
@@ -44,20 +44,20 @@
                 <a class="text-sm font-light text-white" href="/hosting-linux">Hosting Linux</a>
             </ul>
             <ul>
-                <a class="text-sm font-light text-white" href="/hosting-linux">Hosting Cloud</a>
+                <a class="text-sm font-light text-white" href="/hosting-cloud">Hosting Cloud</a>
             </ul>
             <ul>
-                <a class="text-sm font-light text-white" href="/hosting-linux">Hosting Reseller</a>
+                <a class="text-sm font-light text-white" href="/hosting-reseller">Hosting Reseller</a>
             </ul>
         </li>
 
         <li>
             <p class="font-bold text-white">VPS Hosting</p>
             <ul>
-                <a class="text-sm font-light text-white" href="/hosting-linux">VPS Hosting Plesk</a>
+                <a class="text-sm font-light text-white" href="#">VPS Hosting Plesk</a>
             </ul>
             <ul>
-                <a class="text-sm font-light text-white" href="/hosting-linux">VPS Hosting CyberPanel</a>
+                <a class="text-sm font-light text-white" href="#">VPS Hosting CyberPanel</a>
             </ul>
 
         </li>
@@ -65,57 +65,57 @@
         <li>
             <p class="font-bold text-white">Dominios</p>
             <ul>
-                <a class="text-sm font-light text-white" href="/hosting-linux">Registrar</a>
+                <a class="text-sm font-light text-white" href="https://clientes.servistream.net/cart.php?a=add&domain=register">Registrar</a>
             </ul>
             <ul>
-                <a class="text-sm font-light text-white" href="/hosting-linux">Revisar Existencia</a>
+                <a class="text-sm font-light text-white" href="https://clientes.servistream.net/cart.php?a=add&domain=register">Revisar Existencia</a>
             </ul>
         </li>
 
         <li>
             <p class="font-bold text-white">Radio Streaming</p>
             <ul>
-                <a class="text-sm font-light text-white" href="/hosting-linux">CentovaCast</a>
+                <a class="text-sm font-light text-white" href="/centovacast">CentovaCast</a>
             </ul>
             <ul>
-                <a class="text-sm font-light text-white" href="/hosting-linux">SonicPanel</a>
+                <a class="text-sm font-light text-white" href="/sonicpanel">SonicPanel</a>
             </ul>
             <ul>
-                <a class="text-sm font-light text-white" href="/hosting-linux">Azuracast</a>
+                <a class="text-sm font-light text-white" href="#">Azuracast</a>
             </ul>
         </li>
 
         <li>
             <p class="font-bold text-white">Tv Streaming</p>
             <ul>
-                <a class="text-sm font-light text-white" href="/hosting-linux">Streaming</a>
+                <a class="text-sm font-light text-white" href="/tv-streaming">Streaming</a>
             </ul>
         </li>
 
         <li>
             <p class="font-bold text-white">Reseller Radio</p>
             <ul>
-                <a class="text-sm font-light text-white" href="/hosting-linux">CentovaCast</a>
+                <a class="text-sm font-light text-white" href="/reseller-radio">CentovaCast</a>
             </ul>
         </li>
 
         <li>
             <p class="font-bold text-white">Otros Servicios</p>
             <ul>
-                <a class="text-sm font-light text-white" href="/hosting-linux">App Android</a>
+                <a class="text-sm font-light text-white" href="#">App Android</a>
             </ul>
             <ul>
-                <a class="text-sm font-light text-white" href="/hosting-linux">Audio Record Mixer</a>
+                <a class="text-sm font-light text-white" href="#">Audio Record Mixer</a>
             </ul>
         </li>
 
         <li>
             <p class="font-bold text-white">Soporte</p>
             <ul>
-                <a class="text-sm font-light text-white" href="/hosting-linux">WhatsApp</a>
+                <a class="text-sm font-light text-white" href="https://walink.co/4f797c" target="_blank">WhatsApp</a>
             </ul>
             <ul>
-                <a class="text-sm font-light text-white" href="/hosting-linux">Crear un Ticket</a>
+                <a class="text-sm font-light text-white" href="https://clientes.servistream.net/submitticket.php">Crear un Ticket</a>
             </ul>
         </li>
     </div>
@@ -124,14 +124,14 @@
 
         <div class="contenedor mx-auto flex text-center flex-col justify-between items-center lg:flex-row">
             <div>
-                <a class="text-sm font-light text-white" href="">Blog</a>
-                <a class="text-sm font-light text-white" href="">Tutoriales</a>
-                <a class="text-sm font-light text-white" href="">Preguntas Frecuentes</a>
-                <a class="text-sm font-light text-white" href="">Términos y Condiciones</a>
+                <a class="text-sm font-light text-white" href="https://blog.servistream.net">Blog</a>
+                <a class="text-sm font-light text-white" href="https://www.youtube.com/results?search_query=centovacast" target="_blank">Tutoriales</a>
+                <a class="text-sm font-light text-white" href="/preguntas-frecuentes">Preguntas Frecuentes</a>
+                <a class="text-sm font-light text-white" href="/terminos">Términos y Condiciones</a>
             </div>
 
             <div>
-                <p class="text-sm font-light mt-5 lg:mt-0 text-white">© 2014 – 2023. Todos los derechos reservados.</p>
+                <p class="text-sm font-light mt-5 lg:mt-0 text-white">© 2014 – 2024. Todos los derechos reservados.</p>
             </div>
 
 
